--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://13.232.236.142:9000/</sonar.host.url>
+		<sonar.host.url>http://35.154.205.142/</sonar.host.url>
                 <sonar.login>admin</sonar.login>
 		<sonar.password>suresh</sonar.password>  
               
@@ -99,13 +99,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://15.207.85.113:8081/repository/maven-releases/</url>
+	      <url>http://13.233.190.201/repository/maven-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://15.207.85.113:8081/repository/maven-snapshots//</url>
+	      <url>http://13.233.190.201/repository/maven-snapshots//</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
