--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,7 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://http://13.235.48.104:8081/repository/maven-releases/</url>
+	      <url>http:http://13.235.48.104:8081/repository/maven-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
